infra/controllers/argocd/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  gatewayClassName: nginx
  listeners:
    - hostname: prod46246846-argocd.icedev.tn
      name: argocd-route-http
      port: 80
      protocol: HTTP
